Configure libcluster, cleanup

--- a/shoutbox/Dockerfile
+++ b/shoutbox/Dockerfile
@@ -30,7 +30,7 @@ RUN mix phx.digest
 # compile and build release
 COPY lib lib
 # uncomment COPY if rel/ exists
-# COPY rel rel
+COPY rel rel
 RUN mix do compile, release
 
 # prepare release image
